<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.taskassignment.viewModel.MainActivtyViewModel" />

        <variable
            name="mobileNumber"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:background="@drawable/background_curve_login"
            android:padding="@dimen/dimes_20dp"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acet_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimes_16dp"
                android:layout_marginEnd="@dimen/dimes_16dp"
                android:background="@drawable/capsule_fill_shape"
                android:hint="@string/mobile_hint"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/dimes_16dp"
                android:text="@={mobileNumber}"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acet_otp_one"
                android:layout_width="@dimen/dimes_50dp"
                android:layout_height="@dimen/dimes_50dp"
                android:layout_marginStart="@dimen/dimes_40dp"
                android:layout_marginTop="@dimen/dimes_10dp"
                android:background="@drawable/circle"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/acet_otp_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acet_mobile"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acet_otp_two"
                android:layout_width="@dimen/dimes_50dp"
                android:layout_height="@dimen/dimes_50dp"
                android:layout_marginTop="@dimen/dimes_10dp"
                android:background="@drawable/circle"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/acet_otp_three"
                app:layout_constraintStart_toEndOf="@+id/acet_otp_one"
                app:layout_constraintTop_toBottomOf="@+id/acet_mobile"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acet_otp_three"
                android:layout_width="@dimen/dimes_50dp"
                android:layout_height="@dimen/dimes_50dp"
                android:layout_marginTop="@dimen/dimes_10dp"
                android:background="@drawable/circle"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/acet_otp_four"
                app:layout_constraintStart_toEndOf="@+id/acet_otp_two"
                app:layout_constraintTop_toBottomOf="@+id/acet_mobile"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acet_otp_four"
                android:layout_width="@dimen/dimes_50dp"
                android:layout_height="@dimen/dimes_50dp"
                android:layout_marginTop="@dimen/dimes_10dp"
                android:layout_marginEnd="@dimen/dimes_40dp"
                android:background="@drawable/circle"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/acet_otp_three"
                app:layout_constraintTop_toBottomOf="@+id/acet_mobile"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/actv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimes_16dp"
                android:layout_marginTop="@dimen/dimes_16dp"
                android:layout_marginEnd="@dimen/dimes_16dp"
                android:background="@drawable/next_button_background"
                android:clickable="true"
                android:elevation="@dimen/dimes_32dp"
                android:onClick="@{() -> viewModel.setOnClickLoginButton()}"
                android:padding="@dimen/dimes_12dp"
                android:text="@string/login_hint"
                android:textAlignment="center"
                android:textSize="@dimen/dimes_16sp"
                android:translationZ="@dimen/dimes_5dp"
                app:layout_constraintTop_toBottomOf="@+id/acet_otp_four" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimes_16dp"
                android:layout_marginTop="@dimen/dimes_10dp"
                android:layout_marginEnd="@dimen/dimes_10dp"
                android:clickable="true"
                android:onClick="@{() -> viewModel.setOnClickRegisterButton()}"
                android:paddingStart="@dimen/dimes_10dp"
                android:paddingTop="@dimen/dimes_10dp"
                android:paddingBottom="@dimen/dimes_10dp"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimes_16sp"
                android:translationZ="@dimen/dimes_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actv_login"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>