<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timeUpdate"
            type="String" />

        <variable
            name="title"
            type="String" />

        <variable
            name="qna"
            type="com.example.taskassignment.model.QuestionAnswerModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.QuizActivty">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_orange" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardOne"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimes_70dp"
            android:layout_margin="@dimen/dimes_16dp"
            android:layout_marginStart="@dimen/dimes_5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dimes_5dp"
            app:cardElevation="@dimen/dimes_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actv_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimes_16dp"
                    android:layout_marginTop="@dimen/dimes_10dp"
                    android:layout_marginEnd="@dimen/dimes_32dp"
                    android:layout_marginBottom="@dimen/dimes_10dp"
                    android:text="@{timeUpdate}"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:padding="@dimen/dimes_5dp"
                    app:layout_constraintEnd_toStartOf="@+id/topic"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/topic"
                    android:layout_width="@dimen/dimes_50dp"
                    android:layout_height="@dimen/dimes_50dp"
                    android:src="@drawable/ic_java"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/acb_timer"
                    app:layout_constraintStart_toEndOf="@+id/actv_time"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/acb_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimes_32dp"
                    android:layout_marginEnd="@dimen/dimes_16dp"
                    android:background="@drawable/next_button_background"
                    android:textOff="Start Timer"
                    android:padding="@dimen/dimes_2dp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/topic"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimes_16dp"
            android:layout_marginTop="@dimen/dimes_16dp"
            android:layout_marginEnd="@dimen/dimes_16dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cardOne">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_orange"
                    android:padding="@dimen/dimes_16dp"
                    android:text="@{title}"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimes_16sp"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/actv_title">

                    <LinearLayout
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimes_16dp"
                        android:layout_marginTop="@dimen/dimes_16dp"
                        android:layout_marginEnd="@dimen/dimes_16dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent">
                        ​

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimes_16dp"
                            android:layout_marginStart="@dimen/dimes_30dp"
                            android:text="@string/Question"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:translationZ="@dimen/dimes_8dp" />
                        ​

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimes_5dp"
                            android:layout_marginTop="-5dp"
                            android:layout_marginEnd="@dimen/dimes_5dp"
                            android:layout_marginBottom="@dimen/dimes_5dp"
                            app:cardCornerRadius="@dimen/dimes_5dp"
                            app:cardElevation="@dimen/dimes_5dp"
                            app:layout_constraintTop_toTopOf="parent">
                            ​

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/actv_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimes_16dp"
                                android:text="@={qna.question}"
                                android:textSize="15sp" />
                            ​
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimes_16dp"
                        android:layout_marginTop="@dimen/dimes_16dp"
                        android:layout_marginEnd="@dimen/dimes_16dp"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@+id/question">

                        <RadioButton
                            android:id="@+id/question_one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{qna.optionA}" />

                        <RadioButton
                            android:id="@+id/question_two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{qna.optionB}" />

                        <RadioButton
                            android:id="@+id/question_three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{qna.optionC}" />

                        <RadioButton
                            android:id="@+id/question_four"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{qna.optionD}" />
                    </RadioGroup>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/actv_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimes_16dp"
                        android:layout_marginTop="@dimen/dimes_16dp"
                        android:layout_marginEnd="@dimen/dimes_16dp"
                        android:layout_marginBottom="@dimen/dimes_16dp"
                        android:background="@drawable/next_button_background"
                        android:clickable="true"
                        android:elevation="@dimen/dimes_32dp"
                        android:padding="@dimen/dimes_12dp"
                        android:text="@string/next"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimes_16sp"
                        android:translationZ="@dimen/dimes_5dp"
                        app:layout_constraintTop_toBottomOf="@+id/options" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/actv_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimes_16dp"
                        android:layout_marginTop="@dimen/dimes_16dp"
                        android:layout_marginEnd="@dimen/dimes_16dp"
                        android:layout_marginBottom="@dimen/dimes_70dp"
                        android:background="@drawable/cancel"
                        android:clickable="true"
                        android:elevation="@dimen/dimes_32dp"
                        android:padding="@dimen/dimes_12dp"
                        android:text="@string/skip"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimes_16sp"
                        android:translationZ="@dimen/dimes_5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/actv_register" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>